// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests dot, severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#44e858",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: danger 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#fbacaa",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: info 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#aad7fb",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: success 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#aafbb7",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#fddeaa",
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#44e858",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 2`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#aad7fb",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 3`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#aafbb7",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 4`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#fddeaa",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 5`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#fbacaa",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: default 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 21,
          "justifyContent": "center",
          "paddingHorizontal": 7,
        },
        {
          "backgroundColor": "#44e858",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#000000",
            "fontFamily": "TT Fellows",
            "fontSize": 10.5,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests with custom style 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 100,
          "height": 7,
          "width": 7,
        },
        {
          "backgroundColor": "#44e858",
        },
      ]
    }
  />
</View>
`;
